data/derived/sp14/progs/unify/prog0213.ml.out
Characters 72-97:
  | h::t -> mulByDigit i (List.rev l) ::  h*i :: [];;
            ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
